--- a/src/resources/assets/sass/partials/defaults.scss
+++ b/src/resources/assets/sass/partials/defaults.scss
@@ -4,6 +4,17 @@
     display: none;
 }
 
+.hide-native-scrollbar {
+    * {
+        overflow: -moz-scrollbars-none;
+        -ms-overflow-style: none;
+
+        &::-webkit-scrollbar {
+            width: 0 !important;
+        }
+    }
+}
+
 .__stack-container,
 .__stack-files,
 .__stack-sidebar,
