--- a/src/resources/assets/sass/manager.scss
+++ b/src/resources/assets/sass/manager.scss
@@ -153,7 +153,7 @@
     display: none;
 
     &.show {
-        background-color: rgba($dark, 0.9);
+        background-color: rgba($blue, 0.25);
         display: flex;
         flex-wrap: wrap;
         height: 100%;
@@ -162,7 +162,15 @@
         position: absolute;
         top: 0;
         width: 100%;
-        z-index: 11;
+        z-index: 12;
+
+        & ~ .__stack-loading {
+            background-color: $white;
+            height: 100%;
+            position: absolute;
+            width: 100%;
+            z-index: 11;
+        }
 
         & ~ .__stack-files,
         & ~ .__stack-sidebar {
@@ -173,12 +181,18 @@
 
     .dz-preview-ops {
         bottom: 1rem;
+        display: flex;
+        flex-direction: column;
         position: absolute;
         right: 1rem;
         z-index: 2;
 
         button {
-            color: white;
+            color: $white;
+        }
+
+        .icon-btn {
+            color: $black;
         }
     }
 }
@@ -206,7 +220,6 @@
         transform: translateY(-100%);
     }
 }
-
 
 /*                manager                */
 .media-manager__stack {
@@ -758,7 +771,7 @@
 
     > div {
         max-height: 40vh;
-        overflow: scroll;
+        overflow-y: scroll;
     }
 
     .image-scroll-btn {
