--- a/src/resources/assets/sass/manager.scss
+++ b/src/resources/assets/sass/manager.scss
@@ -152,33 +152,6 @@
 #uploadPreview {
     display: none;
 
-    &.show {
-        background-color: rgba($blue, 0.25);
-        display: flex;
-        flex-wrap: wrap;
-        height: 100%;
-        left: 0;
-        overflow-y: scroll;
-        position: absolute;
-        top: 0;
-        width: 100%;
-        z-index: 12;
-
-        & ~ .__stack-loading {
-            background-color: $white;
-            height: 100%;
-            position: absolute;
-            width: 100%;
-            z-index: 11;
-        }
-
-        & ~ .__stack-files,
-        & ~ .__stack-sidebar {
-            filter: blur(5px);
-            opacity: 0.25;
-        }
-    }
-
     .dz-preview-ops {
         bottom: 1rem;
         display: flex;
@@ -189,10 +162,59 @@
 
         button {
             color: $white;
+            transition: transform 0.3s, box-shadow 0.3s;
+
+            &:hover {
+                filter: drop-shadow(0 4px 6px rgba($black, 0.11));
+                transform: translateY(-0.2rem);
+            }
         }
 
         .icon-btn {
             color: $black;
+        }
+    }
+
+    .sidebar-container {
+        border-right: 2px dashed darken($active_theme, 5%);
+        height: 100%;
+        max-width: 20%;
+        min-width: 20%;
+        overflow-y: scroll;
+
+        .sidebar {
+            display: flex;
+            flex-wrap: wrap;
+            height: fit-content;
+        }
+    }
+
+    .preview {
+        display: flex;
+        justify-content: center;
+        padding: 1rem;
+        width: 100%;
+
+        img {
+            height: 100%;
+        }
+    }
+
+    &.show {
+        background-color: $active_theme;
+        display: flex;
+        height: 100%;
+        left: 0;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: 12;
+
+        & ~ .__stack-files,
+        & ~ .__stack-sidebar {
+            filter: blur(5px);
+            opacity: 0.25;
         }
     }
 }
@@ -208,16 +230,21 @@
     align-items: flex-end;
     display: flex;
     flex-direction: column;
+    height: fit-content;
     padding: 1rem;
+    position: relative;
 
     .dz-image img {
         border-radius: 8px;
+        cursor: alias;
         display: block;
     }
 
     .dz-remove {
+        bottom: 1rem;
         display: block;
-        transform: translateY(-100%);
+        position: absolute;
+        right: 1rem;
     }
 }
 
@@ -389,6 +416,10 @@
     position: relative;
     transition: all 0.25s $anim-ease;
     z-index: 1;
+
+    &.more-height {
+        min-height: 75vh;
+    }
 
     &.dz-drag-hover {
         background-color: rgba($blue, 0.25);
